Java Function Practice, String, Variables, Printf using

--- a/JAVA/.gitignore
+++ b/JAVA/.gitignore
@@ -273,5 +273,6 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,clion,intellij,pycharm
